# aria2p

./: .copier-answers.yml  .coverage  .coverage-tmp.html  .cruft.json  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CREDITS.md  LICENSE  Makefile  README.md  appveyor.yml  aria2p.py  coverage.ini  devdeps.txt  duties.py  gen_ref_nav.py  index.html  mkdocs.insiders.yml  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  sitemap.xml  tasks.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: 1-bug.md  bug_report.md  config.yml
.github/workflows/: ci.yml  release.yml
changelog/: index.html
code_of_conduct/: index.html
config/: coverage.ini  flake8.ini  mypy.ini  pytest.ini  ruff.toml
configuration/: index.html
contributing/: index.html
coverage/: covindex.html  d_99d3a866d13ae299_callbacks_py.html  d_a44f0ac069e85531_conftest_py.html  d_a44f0ac069e85531_http_server_py.html  d_a44f0ac069e85531_test_api_py.html  d_a44f0ac069e85531_test_cli_py.html  d_a44f0ac069e85531_test_client_py.html  d_a44f0ac069e85531_test_downloads_py.html  d_a44f0ac069e85531_test_interface_py.html  d_a44f0ac069e85531_test_options_py.html  d_a44f0ac069e85531_test_stats_py.html  d_a44f0ac069e85531_test_utils_py.html  d_a76b8bb0997e2189_api_py.html  d_a76b8bb0997e2189_client_py.html  d_a76b8bb0997e2189_downloads_py.html  d_a76b8bb0997e2189_interface_py.html  d_a76b8bb0997e2189_options_py.html  d_a76b8bb0997e2189_stats_py.html  d_a76b8bb0997e2189_types_py.html  d_a76b8bb0997e2189_utils_py.html  d_c81860c76280607e_add_magnet_py.html  d_c81860c76280607e_add_metalink_py.html  d_c81860c76280607e_add_py.html  d_c81860c76280607e_add_torrent_py.html  d_c81860c76280607e_call_py.html  d_c81860c76280607e_listen_py.html  d_c81860c76280607e_pause_py.html  d_c81860c76280607e_purge_py.html  d_c81860c76280607e_remove_py.html  d_c81860c76280607e_resume_py.html  d_c81860c76280607e_show_py.html  d_c81860c76280607e_top_py.html  d_f59263ce22b10dc9_main_py.html  d_f59263ce22b10dc9_parser_py.html  index.html  status.json
credits/: index.html
docs/: conf.py  configuration.md  credits.md  custom.css  gen_ref_nav.py  index.md  macros.py  reference.rst  reference_api.rst  reference_cli.rst  reference_client.rst  reference_downloads.rst  reference_options.rst  reference_stats.rst  reference_utils.rst  requirements.txt  spelling_wordlist.txt  update-dict.sh  usage.md
docs/.overrides/: main.html
docs/.overrides/partials/: comments.html
docs/css/: custom.css  mkdocstrings.css
docs/reference/: api.md  cli.md  client.md  downloads.md  options.md  stats.md  utils.md
license/: index.html
reference/: SUMMARY.txt  index.html
reference/SUMMARY/: index.html
reference/__init__/: index.html
reference/__main__/: index.html
reference/api/: index.html
reference/aria2p/: index.html
reference/aria2p/api/: index.html
reference/aria2p/cli/: index.html
reference/aria2p/cli/commands/: index.html
reference/aria2p/cli/main/: index.html
reference/aria2p/cli/parser/: index.html
reference/aria2p/client/: index.html
reference/aria2p/debug/: index.html
reference/aria2p/downloads/: index.html
reference/aria2p/interface/: index.html
reference/aria2p/options/: index.html
reference/aria2p/stats/: index.html
reference/aria2p/utils/: index.html
reference/cli/: index.html
reference/cli/__init__/: index.html
reference/cli/commands/: index.html
reference/cli/commands/__init__/: index.html
reference/cli/commands/add/: index.html
reference/cli/commands/add_magnet/: index.html
reference/cli/commands/add_metalink/: index.html
reference/cli/commands/add_torrent/: index.html
reference/cli/commands/call/: index.html
reference/cli/commands/listen/: index.html
reference/cli/commands/pause/: index.html
reference/cli/commands/purge/: index.html
reference/cli/commands/remove/: index.html
reference/cli/commands/resume/: index.html
reference/cli/commands/show/: index.html
reference/cli/commands/top/: index.html
reference/cli/main/: index.html
reference/cli/parser/: index.html
reference/client/: index.html
reference/downloads/: index.html
reference/interface/: index.html
reference/options/: index.html
reference/stats/: index.html
reference/types/: index.html
reference/utils/: index.html
scripts/: check-docs-spelling.sh  check-ports.sh  gen-credits-data.py  gen-readme-data.py  gen-readme-usage.sh  gen_credits.py  gen_readme_data.py  gen_ref_nav.py  get-unused-ports.sh  make  make.py  ports.py  regen_docs.py  setup.sh  update-spelling-wordlist.sh
scripts/templates/: CREDITS.md  README.md  command_call_extra.md  coverage.css
search/: search_index.json
src/aria2p/: __init__.py  __main__.py  api.py  braille.py  cli.py  client.py  daemon.py  debug.py  downloads.py  interface.py  options.py  stats.py  tui.py  types.py  utils.py
src/aria2p/cli/: __init__.py  main.py  parser.py
src/aria2p/cli/commands/: __init__.py  add.py  add_magnet.py  add_metalink.py  add_torrent.py  call.py  listen.py  pause.py  purge.py  remove.py  resume.py  show.py  top.py
src/aria2p/tui/: config.py  errors.py  helpers.py  screen.py  wrapper.py
tests/: __init__.py  conftest.py  http_server.py  test_api.py  test_cli.py  test_client.py  test_downloads.py  test_interface.py  test_options.py  test_stats.py  test_tui.py  test_utils.py
tests/data/: bunsenlabs-helium-4.iso.torrent  callbacks.py  debian.metalink  linux_magnets
tests/data/configs/: add-paused.conf  default.conf  max-5-dls.conf
tests/data/input_files/: one-valid-one-invalid-downloads  two-invalid-downloads  two-valid-downloads
tests/data/sessions/: 1-dl-2-uris.txt  1-dl-paused.txt  1-dl.txt  2-dl-in-queue.txt  2-dls-paused.txt  2-dls.txt  3-dls.txt  3-magnets.txt  50-dls.txt  big-download.txt  dl-2-aria2.txt  dl-aria2-1.34.0-paused.txt  dl-aria2-1.34.0.txt  max-dl-limit-10000.txt  one-active-one-paused.txt  small-download.txt  small-file-and-paused-file.txt  small-local-download.txt  very-small-download.txt  very-small-remote-file.txt
usage/: index.html
(+18 files in other folders)
