[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aria2p"
description = "Command-line tool and library to interact with an aria2c daemon process with JSON-RPC."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.8"
keywords = ["aria2", "aria2c", "aria2-cli"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.5",
    "platformdirs>=4.2",
    "httpx",
    "tomli>=2.0; python_version < '3.11'",
    "websockets",
    "aioshutil",
]

[project.optional-dependencies]
tui = [
    "asciimatics>=1.13",
    "pyperclip>=1.8",
]

[project.urls]
Homepage = "https://pawamoy.github.io/aria2p"
Documentation = "https://pawamoy.github.io/aria2p"
Changelog = "https://pawamoy.github.io/aria2p/changelog"
Repository = "https://github.com/pawamoy/aria2p"
Issues = "https://github.com/pawamoy/aria2p/issues"
Discussions = "https://github.com/pawamoy/aria2p/discussions"
Gitter = "https://gitter.im/aria2p/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
aria2p = "aria2p.cli.main:main"

[tool.pdm]
version = {source = "scm"}

[tool.pdm.build]
package-dir = "src"
editable-backend = "editables"
source-includes = ["share"]

[tool.pdm.build.wheel-data]
data = [
    {path = "share/**/*", relative-to = "."},
]
