[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "aria2p"
description = "Command-line tool and library to interact with an aria2c daemon process with JSON-RPC."
authors = [{name = "Timothée Mazzucotelli", email = "dev@pawamoy.fr"}]
license = {text = "ISC"}
readme = "README.md"
requires-python = ">=3.9"
keywords = ["aria2", "aria2c", "aria2-cli"]
dynamic = ["version"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.5",
    "platformdirs>=4.2",
    "requests>=2.19",
    "tomli>=2.0; python_version < '3.11'",
    "websocket-client>=0.58",
]

[project.optional-dependencies]
tui = [
    "asciimatics>=1.13",
    "pyperclip>=1.8",
]

[project.urls]
Homepage = "https://pawamoy.github.io/aria2p"
Documentation = "https://pawamoy.github.io/aria2p"
Changelog = "https://pawamoy.github.io/aria2p/changelog"
Repository = "https://github.com/pawamoy/aria2p"
Issues = "https://github.com/pawamoy/aria2p/issues"
Discussions = "https://github.com/pawamoy/aria2p/discussions"
Gitter = "https://gitter.im/aria2p/community"
Funding = "https://github.com/sponsors/pawamoy"

[project.scripts]
aria2p = "aria2p.cli.main:main"

[tool.pdm.version]
source = "call"
getter = "scripts.get_version:get_version"

[tool.pdm.build]
# Include as much as possible in the source distribution, to help redistributors.
excludes = ["**/.pytest_cache"]
source-includes = [
    "config",
    "docs",
    "scripts",
    "share",
    "tests",
    "duties.py",
    "mkdocs.yml",
    "*.md",
    "LICENSE",
]

[tool.pdm.build.wheel-data]
# Manual pages can be included in the wheel.
# Depending on the installation tool, they will be accessible to users.
# pipx supports it, uv does not yet, see https://github.com/astral-sh/uv/issues/4731.
data = [
    {path = "share/**/*", relative-to = "."},
]

[dependency-groups]
dev = [
    # maintenance
    "build>=1.2",
    "git-changelog>=2.5",
    "twine>=5.1",

    # ci
    "duty>=1.4",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-randomly>=3.15",
    "pytest-rerunfailures>=11.1",
    "pytest-xdist>=3.6",
    "mypy>=1.10",
    "types-markdown>=3.6",
    "types-pyyaml>=6.0",
    "types-requests>=2.32",
    "fastapi>=0.100",
    "psutil>=5.9.5",
    "responses>=0.23",
    "uvicorn>=0.23",

    # docs
    "black>=24.4",
    "markdown-callouts>=0.4",
    "markdown-exec>=1.8",
    "mkdocs>=1.6",
    "mkdocs-coverage>=1.0",
    "mkdocs-gen-files>=0.5",
    "mkdocs-git-revision-date-localized-plugin>=1.2",
    "mkdocs-literate-nav>=0.6",
    "mkdocs-material>=9.5",
    "mkdocs-minify-plugin>=0.8",
    "mkdocstrings[python]>=0.25",
    # YORE: EOL 3.10: Remove line.
    "tomli>=2.0; python_version < '3.11'",
]